<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game_pin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="tk.smashr.kahootsmasher.GamePin"
    android:screenOrientation="portrait"
    android:animateLayoutChanges="true"
    android:background= "@color/kahootBlue"
    tools:animateLayoutChanges="true">

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/settings"
        android:background="@drawable/gear"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/gamePin"
        android:hint="@string/game_pin"
        android:selectAllOnFocus="false"
        android:background="@android:color/white"
        android:textAlignment="center"
        android:layout_marginTop="50sp"
        android:layout_alignTop="@+id/Title"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/smashIt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Title"
        android:layout_marginTop="122dp"
        android:textSize="40sp"
        android:layout_below="@+id/settings"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"/>

    <Button
        android:text="@string/enter"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:id="@+id/enter"
        android:layout_below="@+id/gamePin"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
