<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_smashing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tk.smashr.kahootsmasher.Smashing"
    android:screenOrientation="portrait"
    android:background="@color/kahootBlue">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout"></LinearLayout>


    <Button
        android:layout_width="32dp"
        android:layout_height="30dp"
        android:layout_below="@+id/layout"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:id="@+id/backButton"
        android:background="@drawable/back_arrow" />

    <TextView
        android:text="@string/smashing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textColor="@android:color/black"
        android:textStyle="normal|bold"
        android:textSize="30sp"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="center"
        android:layout_marginTop="72dp"
        android:layout_below="@+id/backButton"
        android:layout_alignParentStart="true" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="82dp"
        android:layout_alignParentBottom="true"
        android:id = "@+id/verifyBtns"
        android:layout_centerHorizontal="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:layout_width="128sp"
                android:layout_height="128sp"
                android:id="@+id/redBtn"
                android:background="@drawable/red_answer"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:layout_width="128sp"
                android:layout_height="128sp"
                android:id="@+id/BlueBtn"
                android:background="@drawable/blue_answer"
                style="?android:attr/buttonBarButtonStyle"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:layout_width="128sp"
                android:layout_height="128sp"
                android:id="@+id/GreenBtn"
                android:background="@drawable/green_answer"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:layout_width="128sp"
                android:layout_height="128sp"
                android:id="@+id/yellowBtn"
                android:background="@drawable/yellow_answer"
                style="?android:attr/buttonBarButtonStyle"/>

        </TableRow>

    </TableLayout>

    <TextView
        android:text="@string/joined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/Progress"
        android:textAlignment="center"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="@string/verified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/Verified"
        android:textAlignment="center"
        android:layout_below="@+id/Progress"
        android:layout_alignParentStart="true" />

</RelativeLayout>
