<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kahootBlue"
    android:screenOrientation="portrait"
    tools:context="tk.smashr.smashit.AdvancedSmashing">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout_advanced_smashing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_advanced_smashing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:contentInsetStartWithNavigation="0dp"
            app:elevation="0dp"
            app:title="@string/smashing"
            app:titleTextColor="@android:color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="32dp">

            <TextView
                android:id="@+id/joined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/joined"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/answered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/joined"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/answered"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/answered"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/redButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/red_answer_pressed" />

                <TextView
                    android:id="@+id/redText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/redButton"
                    android:layout_alignBottom="@+id/redButton"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/redButton"
                    android:text="0/100"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <Button
                    android:id="@+id/blueButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_alignStart="@+id/redButton"
                    android:layout_below="@+id/redButton"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/blue_answer_pressed" />

                <TextView
                    android:id="@+id/blueText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/blueButton"
                    android:layout_alignBottom="@+id/blueButton"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/blueButton"
                    android:text="0/100"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <Button
                    android:id="@+id/yellowButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_alignStart="@+id/blueButton"
                    android:layout_below="@+id/blueButton"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/yellow_answer_pressed" />

                <TextView
                    android:id="@+id/yellowText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/yellowButton"
                    android:layout_alignBottom="@+id/yellowButton"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/yellowButton"
                    android:text="0/100"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <Button
                    android:id="@+id/greenButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_alignStart="@+id/yellowButton"
                    android:layout_below="@+id/yellowButton"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/green_answer_pressed" />

                <TextView
                    android:id="@+id/greenText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/greenButton"
                    android:layout_alignBottom="@+id/greenButton"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/greenButton"
                    android:text="0/100"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </RelativeLayout>

            <CheckBox
                android:id="@+id/isRandom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:checked="true"
                android:text="@string/randomAnswer" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>